fixes weird z-index bug causing wavelength to disappear

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -554,7 +554,7 @@ a:active svg#atom, a:active svg#github {
 .wavelength {
   position: relative;
   top: 3.1em;
-  z-index: -1;
+  z-index: 0;
   overflow: hidden;
   margin-bottom: 1.5em;
 }
